--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-    background-color: rgb(197, 5, 197);
+    background-color: rgb(61, 61, 61);
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
@@ -26,5 +26,5 @@
 .title {
     font-size: 1.5rem;
     font-weight: bold;
-    color: white;
+    color: rgb(229, 227, 227) !important;
 }
