--- a/src/styles/RoomCodePage.css
+++ b/src/styles/RoomCodePage.css
@@ -1,20 +1,27 @@
 .room-code-page {
+    max-width: 100%; /* Maximum width of the page container */
+    margin: 20px auto; /* Center the page horizontally */
+    margin-left: 20px;
+    margin-right:20px;
+    padding-bottom: 40px;
+    padding: 40px; /* Add padding around the content */
+    background-color: #f9f9f9; /* Light gray background */
+    border-radius: 15px; /* Rounded corners */
+    height: 90%;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15); /* Subtle shadow for a lifted effect */
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 80vh;
-    background-color: #f0f4f8;
-    padding: 20px;
-    text-align: center;
+    flex-direction: column;
 }
 
 .room-code-box {
-    background-color: #ffffff;
+    margin-top: 50px;
     border-radius: 15px;
-    padding: 30px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 0px;
     width: 80%;
     max-width: 600px;
+    display: flex;
+    flex-direction: column;
 }
 
 .room-code {
@@ -48,6 +55,7 @@
     font-size: 1.2rem;
     margin-top: 10px;
     color: #333;
+    text-align: center;
 }
 
 .copy-button {
@@ -60,6 +68,7 @@
     cursor: pointer;
     margin-top: 20px;
     transition: background-color 0.3s ease;
+    align-self: center;
 }
 
 .copy-button:hover {
