--- a/src/styles/SetBackgroundImage.css
+++ b/src/styles/SetBackgroundImage.css
@@ -1,16 +1,22 @@
 .image-page {
+    max-width: 100%; /* Maximum width of the page container */
+    margin: 20px auto; /* Center the page horizontally */
+    margin-left: 20px;
+    margin-right:20px;
+    padding-bottom: 40px;
+    padding: 40px; /* Add padding around the content */
+    background-color: #f9f9f9; /* Light gray background */
+    border-radius: 15px; /* Rounded corners */
+    height: 90%;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15); /* Subtle shadow for a lifted effect */
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f0f0f0;
-    padding: 20px;
+    flex-direction: column;
 }
 
-.title {
+.heading {
     font-size: 2rem;
-    color: #333;
+    color: #5e5e5e; /* Ensure this color is applied */
     margin-bottom: 20px;
 }
 
@@ -34,7 +40,7 @@
 }
 
 .generate-button:disabled {
-    background-color: #cccccc;
+    background-color: #9d9d9d;
     cursor: not-allowed;
 }
 
@@ -48,7 +54,8 @@
 
 .selectors {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    gap:20px;
     align-items: center;
     margin-bottom: 20px;
 }
@@ -64,6 +71,24 @@
     font-size: 1rem;
     border-radius: 5px;
     border: 1px solid #ccc;
+}
+
+.container{
+    background: linear-gradient(135deg, #f0f8ff, #e0f0ff);
+    border: 1px solid #bbb;
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    flex: 1;
+    min-width: 250px;
+    max-width: 600px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    flex-direction: column;
 }
 
 .confirm-button {
@@ -119,7 +144,7 @@
 }
 
 .navigate-button:disabled {
-    background-color: #cccccc;
+    background-color: #9d9d9d;
     cursor: not-allowed;
 }
 
