--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -81,7 +81,7 @@ body {
 }
 
 .submit-button:hover {
-    background-color: #45a049;
+    background-color: #5a5a5a;
     transform: scale(1.05);
 }
 
