--- a/src/styles/RoomCodePage.css
+++ b/src/styles/RoomCodePage.css
@@ -29,8 +29,9 @@
     justify-content: space-between;
     font-size: 6rem;
     font-weight: bold;
-    color: #4caf50;
-    background-color: #e8f5e9;
+    color: #5a5a5a
+    ;
+    background-color: #bebebe;
     border-radius: 15px;
     padding: 30px;
     margin-bottom: 20px;
@@ -41,14 +42,17 @@
     width: 100px;  /* Make width smaller for more vertical stretch */
     height: 150px;  /* Increased height for vertical stretch */
     background-color: #ffffff;
-    border: 2px solid #4caf50;
+    border: 2px solid #393939
+    ;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 6rem;  /* Increase font size for better visibility */
     font-weight: bold;
-    color: #4caf50;
+    color:
+    #5a5a5a
+    ;
 }
 
 .instructions {
@@ -61,7 +65,8 @@
 .copy-button {
     padding: 10px 20px;
     font-size: 1.2rem;
-    background-color: #4caf50;
+    background-color: #393939
+    ;
     color: white;
     border: none;
     border-radius: 8px;
@@ -72,5 +77,7 @@
 }
 
 .copy-button:hover {
-    background-color: #45a049;
+    background-color: 
+    #5a5a5a
+    ;
 }
