--- a/src/styles/SetBackgroundImage.css
+++ b/src/styles/SetBackgroundImage.css
@@ -21,7 +21,8 @@
 }
 
 .generate-button {
-    background-color: #4CAF50;
+    background-color: #393939
+    ;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -36,7 +37,9 @@
 }
 
 .generate-button:hover {
-    background-color: #45a049;
+    background-color:
+    #5a5a5a
+    ;
 }
 
 .generate-button:disabled {
