--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,5 @@
 .header {
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
@@ -7,14 +7,14 @@
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
-
-
     position: relative;
 }
 
 .logo-container {
     display: flex;
     align-items: center;
+    text-decoration: none; /* Remove default link styling */
+    color: inherit; /* Inherit text color */
 }
 
 .logo {
